:bug: Reset wrong font style

--- a/src/style/themes/sleet.styl
+++ b/src/style/themes/sleet.styl
@@ -15,6 +15,7 @@
     letter-spacing: tracking(-40)
     .sleet-nor-snow
       grtskZettaBoldBkslnt()
+      font-style: normal
     +tablet()
       font-size: pxToRem(174)
       line-height: (136 / 174)
